tests/baselines/reference/optionalArgsWithDefaultValues.errors.txt
==== tests/cases/compiler/optionalArgsWithDefaultValues.ts (4 errors) ====
    function foo(x: number, y?:boolean=false, z?=0) {}
    
    class CCC {
        public foo(x: number, y?:boolean=false, z?=0) {}
        static foo2(x: number, y?:boolean=false, z?=0) {}
    }
    
    var a = (x?=0) => { return 1; };
               ~
!!! optionalArgsWithDefaultValues.ts(8,12): error TS1003: Identifier expected.
                 ~
!!! optionalArgsWithDefaultValues.ts(8,14): error TS1005: ':' expected.
                   ~~
!!! optionalArgsWithDefaultValues.ts(8,16): error TS1005: ';' expected.
             ~
!!! optionalArgsWithDefaultValues.ts(8,10): error TS2095: Could not find symbol 'x'.
    var b = (x, y?:number = 2) => { x; };